# PySnake

./: README.md
JSnake/: Controls.js  Food.js  GameEngine.js  Scoreboard.js  Snake.js  index.js
Snake/: build.py  controls.py  food.py  main.py  pyproject.toml  scoreboard.py  snake.py
